picklistsrus/objects/PicklistTestData__c.object
<CustomObject>
    <fields>
        <fullName>AlphaTestField__c</fullName>
        <label>Alpha Sorted Test Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonAlphaTestField__c</fullName>
        <label>Non-Alpha Sorted Test Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regular_Text_Field__c</fullName>
        <description>A field without a picklist assigned to it.</description>
        <label>Regular Text Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Picklist Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Picklist Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>